Fill in the right Debian ITP bug number
This also fixes the last Lintian warning.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
 filter-other-days (1.0.1) UNRELEASED; urgency=medium
 
-  * Initial release. (Closes: #XXXXXX)
+  * Initial release. (Closes: #886310)
 
  -- AJ Jordan <alex@strugee.net>  Tue, 19 Dec 2017 02:41:02 -0500
