Update documentation on `seq`

--- a/filter-other-days.1
+++ b/filter-other-days.1
@@ -71,10 +71,9 @@ There are surely many, many styles of logfile timestamps that
 does not recognize. If you encounter such a style, please file a bug.
 
 .B filter-other-days
-is designed to require only POSIX and
-.B seq
-but was developed on a system with a GNU userland. There may be
-implicit dependencies on GNU extensions lurking in the codebase. If
+is designed to require only POSIX but was developed on a system with a
+GNU userland. There may be implicit dependencies on GNU extensions
+lurking in the codebase. If
 .B filter-other-days
 .I should
 run on your system, but does not, please file a bug.
