Don't focus solely on GNU extensions in the docs
Since we've tested on way more than GNU userlands by now.

--- a/filter-other-days.1
+++ b/filter-other-days.1
@@ -86,9 +86,8 @@ If you encounter such a style, please file a bug.
 except
 .Nm
 .Fl d ,
-is designed to require only POSIX but was developed on a system with a GNU userland.
-There may be implicit dependencies on GNU extensions lurking in the codebase.
-If
+is designed to require only POSIX but was tested on systems with extensions to POSIX.
+There may be implicit dependencies on these extensions lurking in the codebase; if
 .Nm
 .Em should
 run on your system, but does not, please file a bug.
