--- a/filter-other-days.1
+++ b/filter-other-days.1
@@ -52,10 +52,25 @@ Treat
 .Ar seconds
 as the current time, in seconds since the epoch.
 Not available on all systems; availability is determined at runtime.
+.It Fl l Ar locales
+Append the comma-delimited list
+.Ar locales
+to the list of locales to load.
+The default list loads the C locale and the locale defined in the environment.
+Only available on systems where
+.Fl d
+is available.
 .It Fl -help , h
 Print help.
 .It Fl -version , v
 Print version.
+.El
+.Sh ENVIRONMENT
+.Bl -tag -width Ds
+.It Ev LANG
+Loaded as a locale to filter with in addition to the C locale if the
+.Fl d
+option is available.
 .El
 .Sh EXAMPLES
 Filter logfile for entries from today:
