Add the -L option

--- a/filter-other-days.1
+++ b/filter-other-days.1
@@ -60,6 +60,10 @@ The default list loads the C locale and the locale defined in the environment.
 Only available on systems where
 .Fl d
 is available.
+.It Fl L Ar locales
+Like
+.Fl l ,
+but replaces instead of appends to the defaults.
 .It Fl -help , h
 Print help.
 .It Fl -version , v
