--- a/filter-other-days.1
+++ b/filter-other-days.1
@@ -2,7 +2,7 @@
 .\"
 .\" filter-other-days(1) manual page
 .\"
-.\" Copyright 2017, 2018 AJ Jordan <alex@strugee.net>
+.\" Copyright 2017, 2018, 2019 AJ Jordan <alex@strugee.net>
 .\"
 .\" This file is part of filter-other-days.
 .\"
