Extract full and short month names from `locale`
Specifically, I discovered `locale -k` in the course of trying to find
whether there was a way to get how many characters the locale used for
short month names. `locale -k` is mandated by POSIX so we're good to
go.

Therefore this commit:

* Gets rid of the old extraction code that used `date -d` (and thus
  drops the dependency on `date -d` or `date -r` semantics)

* Makes the code work for shortened month names in addition to long
  month names

* Updates the documentation to drop references to locale support
  requiring `-d`

* Updates the argument parsing to not reject -l, -L and -a if we don't
  have -d support

--- a/filter-other-days.1
+++ b/filter-other-days.1
@@ -57,9 +57,6 @@ Append the comma-delimited list
 .Ar locales
 to the list of locales to load.
 The default list loads the C locale and the locale defined in the environment.
-Only available on systems where
-.Fl d
-is available.
 .It Fl L Ar locales
 Like
 .Fl l ,
@@ -85,9 +82,7 @@ Print version.
 .Sh ENVIRONMENT
 .Bl -tag -width Ds
 .It Ev LANG
-Loaded as a locale to filter with in addition to the C locale if the
-.Fl d
-option is available.
+Loaded as a locale to filter with in addition to the C locale.
 .El
 .Sh EXAMPLES
 Filter logfile for entries from today:
