Don't leak `grep`'s exit status

--- a/filter-other-days.1
+++ b/filter-other-days.1
@@ -57,6 +57,9 @@ Print help.
 .It Fl -version , v
 Print version.
 .El
+.Sh EXIT STATUS
+.Ex -std
+Matching zero lines is not considered an error.
 .Sh EXAMPLES
 Filter logfile for entries from today:
 .Bd -literal -offset Dl
